--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  chat_gpt_sdk:
-    git:
-      url: https://github.com/iampawan/Flutter-ChatGPT.git
+  chat_gpt_sdk: ^2.1.2
 
   flutter_dotenv: ^5.0.2
   velocity_x: ^3.6.0
